--- a/compliance/sparql/pom.xml
+++ b/compliance/sparql/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-compliance</artifactId>
-		<version>2.5.0-inception-1</version>
+		<version>2.5.0-inception-2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-sparql-compliance</artifactId>
