--- a/geosparql/pom.xml
+++ b/geosparql/pom.xml
@@ -7,7 +7,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
-		<version>2.5.0-inception-1</version>
+		<version>2.5.0-inception-2-SNAPSHOT</version>
 	</parent>
 
 	<artifactId>rdf4j-queryalgebra-geosparql</artifactId>
