--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
   <groupId>org.eclipse.rdf4j</groupId>
   <artifactId>rdf4j-storage-parent</artifactId>
-  <version>2.5.1-inception-1-SNAPSHOT</version>
+  <version>2.5.1-inception-1</version>
   <packaging>pom</packaging>
 
 	<name>RDF4J Storage</name>
@@ -224,7 +224,7 @@
 		<jackson.version>2.9.8</jackson.version>
 		<jsonldjava.version>0.12.3</jsonldjava.version>
 		<last.japicmp.compare.version>2.0</last.japicmp.compare.version>
-    <rdf4j-core.version>2.5.1-inception-1-SNAPSHOT</rdf4j-core.version>
+    <rdf4j-core.version>2.5.1-inception-1</rdf4j-core.version>
     <rdf4j-tools.version>2.5.0</rdf4j-tools.version>
     <rdf4j-testsuite.version>2.5.0</rdf4j-testsuite.version>
 	</properties>
