--- a/storage/pom.xml
+++ b/storage/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.eclipse.rdf4j</groupId>
 		<artifactId>rdf4j-storage-parent</artifactId>
-		<version>2.5.1-inception-1-SNAPSHOT</version>
+		<version>2.5.1-inception-1</version>
 	</parent>
 	<artifactId>rdf4j-storage</artifactId>
 	<name>RDF4J: Storage</name>
